fix(search): forced color mode adjustments
- Increased specificity of forced color rules, so that the values in
  this component override all the ones in the clearbutton sub-component.
- Improved fix to background color overlap on the clear button. The
  previous fix of a transparent background would have created a mismatch
  of "system color pairings" which isn't ideal according to the spec.
  The modified fix pushes the edges of the button to be within the
  component's border.

--- a/components/search/index.css
+++ b/components/search/index.css
@@ -84,7 +84,7 @@ governing permissions and limitations under the License.
 }
 
 @media (forced-colors: active) {
-  .spectrum-Search-textfield {
+  .spectrum-Search .spectrum-Search-textfield {
     --highcontrast-search-background-color: Field;
     --highcontrast-search-background-color-disabled: Field;
 
@@ -95,16 +95,27 @@ governing permissions and limitations under the License.
     --highcontrast-search-border-color-disabled: GrayText;
 
     --highcontrast-search-focus-indicator-color: Highlight;
+  }
 
+  .spectrum-Search .spectrum-Search-textfield,
+  .spectrum-Search .spectrum-Search-textfield .spectrum-Search-input {
     --highcontrast-search-color-default: FieldText;
     --highcontrast-search-color-hover: FieldText;
     --highcontrast-search-color-focus: FieldText;
     --highcontrast-search-color-focus-hover: FieldText;
-    --highcontrast-search-color-disabled: GrayText;
+    --highcontrast-search-color-disabled: GrayText;  
   }
 
-  .spectrum-Search .spectrum-Search-clearButton .spectrum-ClearButton-fill {
-    background: transparent;
+  .spectrum-Search .spectrum-Search-clearButton {
+    /* Offset from edges to avoid ButtonFace background color overlap on border. */
+    inset-inline-end: calc(var(--mod-search-border-width, var(--spectrum-search-border-width)) + 1px);
+    inset-block-start: calc(var(--mod-search-border-width, var(--spectrum-search-border-width)) + 1px);
+  
+    .spectrum-ClearButton-fill {
+      height: calc(var(--mod-search-block-size, var(--spectrum-search-block-size)) - (2 * var(--mod-search-border-width, var(--spectrum-search-border-width))) - 2px);
+      width: calc(var(--mod-search-block-size, var(--spectrum-search-block-size)) - (2 * var(--mod-search-border-width, var(--spectrum-search-border-width))) - 2px);
+      border-radius: calc(var(--spectrum-search-border-radius) - var(--mod-search-border-width, var(--spectrum-search-border-width)) - 1px);
+    }
   }
 }
 
@@ -124,6 +135,10 @@ governing permissions and limitations under the License.
   inset-inline-end: 0;
   inset-block-start: 0;
   border-radius: var(--mod-search-border-radius, var(--spectrum-search-border-radius));
+
+  .spectrum-ClearButton-fill {
+    border-radius: var(--mod-search-border-radius, var(--spectrum-search-border-radius));
+  }
 }
 
 .spectrum-Search-textfield {
